--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -180,7 +180,7 @@ jobs:
     name: Deploy to Staging
     runs-on: ubuntu-latest
     needs: [test, build]
-    if: success() && github.ref == 'refs/heads/the-future'
+    if: success() && github.ref == 'refs/heads/rails-6'
 
     steps:
     - name: Trigger Deployment
